# mgclient

./: Cargo.toml
src/: client.rs  main.rs
