[package]
name = "mgclient"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "3.0.0", features = ["derive"]}
reqwest = {version = "0.11.9", features = ["blocking", "multipart"]}
serde_json = "1.0"
